fix: fixs id for user and payment
