# docs/swagger.json
@@ -393,9 +393,9 @@
             "required": [
                 "Amount",
                 "CategoryID",
-                "CreateDate",
+                "CreatedAt",
                 "ID",
-                "UpdateDate"
+                "UpdatedAt"
             ],
             "properties": {
                 "Amount": {
@@ -406,7 +406,7 @@
                     "type": "string",
                     "example": "cat_123"
                 },
-                "CreateDate": {
+                "CreatedAt": {
                     "type": "string",
                     "example": "2026-01-20T00:00:00Z"
                 },
@@ -414,7 +414,7 @@
                     "type": "string",
                     "example": "64f8c..."
                 },
-                "UpdateDate": {
+                "UpdatedAt": {
                     "type": "string",
                     "example": "2026-01-20T00:00:00Z"
                 }
@@ -440,12 +440,12 @@
         "dto.UserResponse": {
             "type": "object",
             "required": [
-                "CreatedDate",
+                "CreatedAt",
                 "Email",
                 "ID"
             ],
             "properties": {
-                "CreatedDate": {
+                "CreatedAt": {
                     "type": "string",
                     "example": "2026-01-20T00:00:00Z"
                 },
